#134: fixed spinner z-index

--- a/src/zojax/portlets/imagerotator/resources/styles.css
+++ b/src/zojax/portlets/imagerotator/resources/styles.css
@@ -186,7 +186,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 90;
   width: 984px; 
   height: 100%;
   background: #fff url(portlet-imagerotator/images/spinner.gif) center center no-repeat;
